# epd_bridge

emd_msgs/: CMakeLists.txt
emd_msgs/srv/: Operationsrv.srv
epd_bridge/: CMakeLists.txt  README.md  package.xml
epd_bridge/include/epd_bridge/: utils.hpp
epd_bridge/src/: box_node.cpp  box_tray_node.cpp  human_node.cpp  label_node.cpp  tray_node.cpp  utils.cpp
robot_control_interface_msgs/: CMakeLists.txt  package.xml
robot_control_interface_msgs/action/: RobotCommand.action  RobotCommandDetectBox.action  RobotCommandDetectObject.action  RobotCommandMove.action
robot_control_interface_msgs/msg/: Box.msg  GraspExecutionOptions.msg  Object.msg  SafetyMode.msg  SystemMode.msg
robot_control_interface_msgs/srv/: ChangeMode.srv  DetectBox.srv  DetectObjects.srv  GetPose.srv  Grasp.srv  RemoveObject.srv  ResetNode.srv  RobotCommandGrasp.srv  SafetyInterrupt.srv
ur_msgs/: CMakeLists.txt  package.xml
ur_msgs/srv/: Operationsrv.srv
